[tool.poetry]
name = "redo"
version = "0.1.0"
description = ""
authors = ["Mark <mcdenhoed@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
